2003-10-12  Aaron Plattner  <plattner@caltech.edu>

	* arch/linux/Makefile.am, arch/linux/ipx_bsd.c,
	arch/linux/ipx_kali.c, arch/linux/ipx_mcast4.c,
	arch/linux/ipx_udp.c, arch/linux/linuxnet.c,
	arch/linux/include/ipx_drv.h, arch/linux/include/ipx_mcast4.h,
	arch/win32/Makefile.am, arch/win32/ipx_drv.h,
	arch/win32/ipx_mcast4.c, arch/win32/ipx_udp.c,
	arch/win32/ipx_win.c, arch/win32/winnet.c,
	arch/win32/include/ipx_mcast4.h, include/ipx.h, main/menu.c,
	main/multi.h, main/network.c: add IPv4 multicasting support

2003-10-11  Bradley Bell  <btb@icculus.org>

	* main/endlevel.c, main/piggy.c: fixed endlevel stuff

	* main/cntrlcen.c, main/endlevel.c, main/gamecntl.c,
	main/gamerend.c, main/gameseq.c, main/gauges.c, main/kmatrix.c,
	main/menu.c, main/mission.h, main/network.c, main/weapon.c,
	main/weapon.h: lots of shareware and oem fixes

2003-10-10  Bradley Bell  <btb@icculus.org>

	* arch/win32/winnet.c: fixed stupid win32 network bug

2003-10-10  Bradley Bell  <btb@icculus.org>

	* main/piggy.c: increased D1_MAX_TMAP_NUM

2003-10-10  Martin Schaffner <maschaffner@gmx.ch>

	* main/bm.c, main/bm.h, main/piggy.c: fixes d1 still textures
	which are animated in d2, refactorizes d1 texture reading

2003-10-10  Bradley Bell  <btb@icculus.org>

	* arch/linux/linuxnet.c, main/automap.c, main/automap.h,
	main/bmread.c, main/bmread.h, main/cntrlcen.c, main/cntrlcen.h,
	main/collide.h, main/compbit.h, main/config.h, main/console.c,
	main/controls.h, main/credits.c, main/credits.h, main/crypt.c,
	main/desc_id.h, main/desw.h, main/dumpmine.c, main/effects.c,
	main/effects.h, main/endlevel.c, main/endlevel.h, main/escort.c,
	main/escort.h, main/fireball.h, main/fvi.c, main/fvi.h,
	main/game.c, main/game.h, main/gamecntl.c, main/gamefont.c,
	main/gamefont.h, main/gamemine.h, main/gamepal.c, main/gamepal.h,
	main/gamerend.c, main/gamesave.h, main/gameseq.c, main/gameseq.h,
	main/gamestat.h, main/gauges.h, main/hostage.c, main/hostage.h,