@@ -1,4 +1,4 @@
-/* $Id: cntrlcen.c,v 1.12 2003-10-11 09:28:38 btb Exp $ */
+/* $Id: cntrlcen.c,v 1.13 2003-10-12 09:38:48 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -109,7 +109,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: cntrlcen.c,v 1.12 2003-10-11 09:28:38 btb Exp $";
+static char rcsid[] = "$Id: cntrlcen.c,v 1.13 2003-10-12 09:38:48 btb Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -251,7 +251,7 @@ void do_countdown_frame()
 
 	if (!Control_center_destroyed)	return;
 
-	if (!is_D2_OEM && !is_SHAREWARE)   // get countdown in OEM and SHAREWARE only
+	if (!is_D2_OEM && !is_MAC_SHARE && !is_SHAREWARE)   // get countdown in OEM and SHAREWARE only
 	{
 		// On last level, we don't want a countdown.
 		if ((Current_mission_num == Builtin_mission_num) && (Current_level_num == Last_level))
