@@ -1,4 +1,4 @@
-/* $Id: gamerend.c,v 1.12 2003-10-11 09:28:38 btb Exp $ */
+/* $Id: gamerend.c,v 1.13 2003-10-12 09:38:48 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -23,7 +23,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: gamerend.c,v 1.12 2003-10-11 09:28:38 btb Exp $";
+static char rcsid[] = "$Id: gamerend.c,v 1.13 2003-10-12 09:38:48 btb Exp $";
 #endif
 
 #ifdef WINDOWS
@@ -285,7 +285,7 @@ void render_countdown_gauge()
 	if (!Endlevel_sequence && Control_center_destroyed  && (Countdown_seconds_left>-1)) { // && (Countdown_seconds_left<127))	{
 		int	y;
 
-		if (!is_D2_OEM && !is_SHAREWARE)    // no countdown on registered only
+		if (!is_D2_OEM && !is_MAC_SHARE && !is_SHAREWARE)    // no countdown on registered only
 		{
 			//	On last level, we don't want a countdown.
 			if ((Current_mission_num == Builtin_mission_num) && (Current_level_num == Last_level))
