@@ -1,4 +1,4 @@
-/* $Id: network.c,v 1.23 2003-10-12 09:30:02 btb Exp $ */
+/* $Id: network.c,v 1.24 2003-10-12 09:38:48 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -23,7 +23,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: network.c,v 1.23 2003-10-12 09:30:02 btb Exp $";
+static char rcsid[] = "$Id: network.c,v 1.24 2003-10-12 09:38:48 btb Exp $";
 #endif
 
 #define PATCH12
@@ -4466,6 +4466,15 @@ remenu:
 				nm_messagebox(NULL, 1, TXT_OK, "This OEM version only supports\nthe first 8 levels!");
 				goto remenu;
 		 }
+	}
+
+	if (is_MAC_SHARE)
+	{
+		if (Active_games[choice].levelnum > 4)
+		{
+			nm_messagebox(NULL, 1, TXT_OK, "This SHAREWARE version only supports\nthe first 4 levels!");
+			goto remenu;
+		}
 	}
 
      if (!network_wait_for_all_info (choice))
