@@ -1,3 +1,9 @@
+2003-10-12  Bradley Bell  <btb@icculus.org>
+
+	* main/cntrlcen.c, main/endlevel.c, main/gamerend.c,
+	main/gameseq.c, main/mission.c, main/mission.h, main/network.c:
+	shareware stuff
+
 2003-10-12  Aaron Plattner  <plattner@caltech.edu>
 
 	* arch/linux/Makefile.am, arch/linux/ipx_bsd.c,
